--- a/app/assets/tailwind.css
+++ b/app/assets/tailwind.css
@@ -1468,6 +1468,9 @@
 .max-w-xl {
   max-width: var(--container-xl);
 }
+.max-w-xs {
+  max-width: var(--container-xs);
+}
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -1626,6 +1629,7 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --spacing: 0.25rem;
+    --container-xs: 20rem;
     --container-md: 28rem;
     --container-xl: 36rem;
     --container-7xl: 80rem;
