Added primitive way to create new session

--- a/app/assets/tailwind.css
+++ b/app/assets/tailwind.css
@@ -42,48 +42,6 @@
     }
   }
 }
-.drawer-side {
-  pointer-events: none;
-  visibility: hidden;
-  position: fixed;
-  inset-inline-start: calc(0.25rem * 0);
-  top: calc(0.25rem * 0);
-  z-index: 1;
-  grid-column-start: 1;
-  grid-row-start: 1;
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-  grid-template-rows: repeat(1, minmax(0, 1fr));
-  align-items: flex-start;
-  justify-items: start;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  overscroll-behavior: contain;
-  opacity: 0%;
-  transition: opacity 0.2s ease-out 0.1s allow-discrete, visibility 0.3s ease-out 0.1s allow-discrete;
-  height: 100vh;
-  height: 100dvh;
-  > .drawer-overlay {
-    position: sticky;
-    top: calc(0.25rem * 0);
-    cursor: pointer;
-    place-self: stretch;
-    background-color: oklch(0% 0 0 / 40%);
-  }
-  > * {
-    grid-column-start: 1;
-    grid-row-start: 1;
-  }
-  > *:not(.drawer-overlay) {
-    will-change: transform;
-    transition: translate 0.3s ease-out;
-    translate: -100%;
-    [dir="rtl"] & {
-      translate: 100%;
-    }
-  }
-}
 .drawer-open {
   > .drawer-side {
     overflow-y: auto;
@@ -113,28 +71,6 @@
       pointer-events: auto;
       visibility: visible;
     }
-  }
-}
-.drawer-toggle {
-  position: fixed;
-  height: calc(0.25rem * 0);
-  width: calc(0.25rem * 0);
-  appearance: none;
-  opacity: 0%;
-  &:checked {
-    & ~ .drawer-side {
-      pointer-events: auto;
-      visibility: visible;
-      overflow-y: auto;
-      opacity: 100%;
-      & > *:not(.drawer-overlay) {
-        translate: 0%;
-      }
-    }
-  }
-  &:focus-visible ~ .drawer-content label.drawer-button {
-    outline: 2px solid;
-    outline-offset: 2px;
   }
 }
 .menu {
@@ -1218,11 +1154,6 @@
   overflow-y: auto;
   overscroll-behavior: contain;
 }
-.drawer-content {
-  grid-column-start: 2;
-  grid-row-start: 1;
-  min-width: calc(0.25rem * 0);
-}
 .container {
   width: 100%;
   @media (width >= 40rem) {
@@ -1771,9 +1702,6 @@
   --tw-tracking: var(--tracking-tight);
   letter-spacing: var(--tracking-tight);
 }
-.text-wrap {
-  text-wrap: wrap;
-}
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -1828,6 +1756,9 @@
 }
 .text-gray-500 {
   color: var(--color-gray-500);
+}
+.text-green-500 {
+  color: var(--color-green-500);
 }
 .text-green-700 {
   color: var(--color-green-700);
@@ -1912,10 +1843,6 @@
 .duration-200 {
   --tw-duration: 200ms;
   transition-duration: 200ms;
-}
-.ease-in-out {
-  --tw-ease: var(--ease-in-out);
-  transition-timing-function: var(--ease-in-out);
 }
 .ease-out {
   --tw-ease: var(--ease-out);
@@ -2068,6 +1995,7 @@
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-green-100: oklch(96.2% 0.044 156.743);
     --color-green-300: oklch(87.1% 0.15 154.449);
+    --color-green-500: oklch(72.3% 0.219 149.579);
     --color-green-700: oklch(52.7% 0.154 150.069);
     --color-green-900: oklch(39.3% 0.095 152.535);
     --color-gray-500: oklch(55.1% 0.027 264.364);
