--- a/app/assets/tailwind.css
+++ b/app/assets/tailwind.css
@@ -42,6 +42,48 @@
     }
   }
 }
+.drawer-side {
+  pointer-events: none;
+  visibility: hidden;
+  position: fixed;
+  inset-inline-start: calc(0.25rem * 0);
+  top: calc(0.25rem * 0);
+  z-index: 1;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+  align-items: flex-start;
+  justify-items: start;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  overscroll-behavior: contain;
+  opacity: 0%;
+  transition: opacity 0.2s ease-out 0.1s allow-discrete, visibility 0.3s ease-out 0.1s allow-discrete;
+  height: 100vh;
+  height: 100dvh;
+  > .drawer-overlay {
+    position: sticky;
+    top: calc(0.25rem * 0);
+    cursor: pointer;
+    place-self: stretch;
+    background-color: oklch(0% 0 0 / 40%);
+  }
+  > * {
+    grid-column-start: 1;
+    grid-row-start: 1;
+  }
+  > *:not(.drawer-overlay) {
+    will-change: transform;
+    transition: translate 0.3s ease-out;
+    translate: -100%;
+    [dir="rtl"] & {
+      translate: 100%;
+    }
+  }
+}
 .drawer-open {
   > .drawer-side {
     overflow-y: auto;
@@ -71,6 +113,108 @@
       pointer-events: auto;
       visibility: visible;
     }
+  }
+}
+.drawer-toggle {
+  position: fixed;
+  height: calc(0.25rem * 0);
+  width: calc(0.25rem * 0);
+  appearance: none;
+  opacity: 0%;
+  &:checked {
+    & ~ .drawer-side {
+      pointer-events: auto;
+      visibility: visible;
+      overflow-y: auto;
+      opacity: 100%;
+      & > *:not(.drawer-overlay) {
+        translate: 0%;
+      }
+    }
+  }
+  &:focus-visible ~ .drawer-content label.drawer-button {
+    outline: 2px solid;
+    outline-offset: 2px;
+  }
+}
+.tab {
+  position: relative;
+  display: inline-flex;
+  cursor: pointer;
+  appearance: none;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  webkit-user-select: none;
+  user-select: none;
+  &:hover {
+    @media (hover: hover) {
+      color: var(--color-base-content);
+    }
+  }
+  --tab-p: 1rem;
+  --tab-bg: var(--color-base-100);
+  --tab-border-color: var(--color-base-300);
+  --tab-radius-ss: 0;
+  --tab-radius-se: 0;
+  --tab-radius-es: 0;
+  --tab-radius-ee: 0;
+  --tab-order: 0;
+  --tab-radius-min: calc(0.75rem - var(--border));
+  border-color: #0000;
+  order: var(--tab-order);
+  height: var(--tab-height);
+  font-size: 0.875rem;
+  padding-inline-start: var(--tab-p);
+  padding-inline-end: var(--tab-p);
+  &:is(input[type="radio"]) {
+    min-width: fit-content;
+    &:after {
+      content: attr(aria-label);
+    }
+  }
+  &:is(label) {
+    position: relative;
+    input {
+      position: absolute;
+      inset: calc(0.25rem * 0);
+      cursor: pointer;
+      appearance: none;
+      opacity: 0%;
+    }
+  }
+  &:checked, &:is(label:has(:checked)), &:is(.tab-active, [aria-selected="true"]) {
+    & + .tab-content {
+      display: block;
+      height: calc(100% - var(--tab-height) + var(--border));
+    }
+  }
+  &:not(:checked, label:has(:checked), :hover, .tab-active, [aria-selected="true"]) {
+    color: var(--color-base-content);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-base-content) 50%, transparent);
+    }
+  }
+  &:not(input):empty {
+    flex-grow: 1;
+    cursor: default;
+  }
+  &:focus {
+    --tw-outline-style: none;
+    outline-style: none;
+    @media (forced-colors: active) {
+      outline: 2px solid transparent;
+      outline-offset: 2px;
+    }
+  }
+  &:focus-visible, &:is(label:has(:checked:focus-visible)) {
+    outline: 2px solid currentColor;
+    outline-offset: -5px;
+  }
+  &[disabled] {
+    pointer-events: none;
+    opacity: 40%;
   }
 }
 .menu {
@@ -1019,6 +1163,13 @@
     height: calc(0.25rem * 8);
   }
 }
+.stats {
+  position: relative;
+  display: inline-grid;
+  grid-auto-flow: column;
+  overflow-x: auto;
+  border-radius: var(--radius-box);
+}
 .progress {
   position: relative;
   height: calc(0.25rem * 2);
@@ -1063,11 +1214,29 @@
     }
   }
 }
+.absolute {
+  position: absolute;
+}
 .relative {
   position: relative;
 }
 .static {
   position: static;
+}
+.sticky {
+  position: sticky;
+}
+.top-0 {
+  top: calc(var(--spacing) * 0);
+}
+.top-1 {
+  top: calc(var(--spacing) * 1);
+}
+.top-1\/2 {
+  top: calc(1/2 * 100%);
+}
+.left-3 {
+  left: calc(var(--spacing) * 3);
 }
 .textarea {
   border: var(--border) solid #0000;
@@ -1135,6 +1304,26 @@
     cursor: not-allowed;
   }
 }
+.z-10 {
+  z-index: 10;
+}
+.tab-content {
+  order: var(--tabcontent-order);
+  display: none;
+  border-color: transparent;
+  --tabcontent-radius-ss: 0;
+  --tabcontent-radius-se: 0;
+  --tabcontent-radius-es: 0;
+  --tabcontent-radius-ee: 0;
+  --tabcontent-order: 1;
+  width: 100%;
+  margin: var(--tabcontent-margin);
+  border-width: var(--border);
+  border-start-start-radius: var(--tabcontent-radius-ss);
+  border-start-end-radius: var(--tabcontent-radius-se);
+  border-end-start-radius: var(--tabcontent-radius-es);
+  border-end-end-radius: var(--tabcontent-radius-ee);
+}
 .modal-box {
   grid-column-start: 1;
   grid-row-start: 1;
@@ -1153,6 +1342,30 @@
   box-shadow: oklch(0% 0 0/ 0.25) 0px 25px 50px -12px;
   overflow-y: auto;
   overscroll-behavior: contain;
+}
+.stat-value {
+  grid-column-start: 1;
+  white-space: nowrap;
+  font-size: 2rem;
+  font-weight: 800;
+}
+.stat-desc {
+  grid-column-start: 1;
+  white-space: nowrap;
+  color: var(--color-base-content);
+  @supports (color: color-mix(in lab, red, red)) {
+    color: color-mix(in oklab, var(--color-base-content) 60%, transparent);
+  }
+  font-size: 0.75rem;
+}
+.stat-title {
+  grid-column-start: 1;
+  white-space: nowrap;
+  color: var(--color-base-content);
+  @supports (color: color-mix(in lab, red, red)) {
+    color: color-mix(in oklab, var(--color-base-content) 60%, transparent);
+  }
+  font-size: 0.75rem;
 }
 .container {
   width: 100%;
@@ -1293,6 +1506,9 @@
 .mb-6 {
   margin-bottom: calc(var(--spacing) * 6);
 }
+.ml-2 {
+  margin-left: calc(var(--spacing) * 2);
+}
 .badge {
   display: inline-flex;
   align-items: center;
@@ -1313,12 +1529,36 @@
   --size: calc(var(--size-selector, 0.25rem) * 6);
   height: var(--size);
 }
+.tabs {
+  display: flex;
+  flex-wrap: wrap;
+  --tabs-height: auto;
+  --tabs-direction: row;
+  --tab-height: calc(var(--size-field, 0.25rem) * 10);
+  height: var(--tabs-height);
+  flex-direction: var(--tabs-direction);
+}
 .navbar {
   display: flex;
   width: 100%;
   align-items: center;
   padding: 0.5rem;
   min-height: 4rem;
+}
+.stat {
+  display: inline-grid;
+  width: 100%;
+  column-gap: calc(0.25rem * 4);
+  padding-inline: calc(0.25rem * 6);
+  padding-block: calc(0.25rem * 4);
+  grid-template-columns: repeat(1, 1fr);
+  &:not(:last-child) {
+    border-inline-end: var(--border) dashed currentColor;
+    @supports (color: color-mix(in lab, red, red)) {
+      border-inline-end: var(--border) dashed color-mix(in oklab, currentColor 10%, #0000);
+    }
+    border-block-end: none;
+  }
 }
 .navbar-end {
   display: inline-flex;
@@ -1455,6 +1695,9 @@
 .w-4 {
   width: calc(var(--spacing) * 4);
 }
+.w-16 {
+  width: calc(var(--spacing) * 16);
+}
 .w-full {
   width: 100%;
 }
@@ -1500,6 +1743,14 @@
 .border-collapse {
   border-collapse: collapse;
 }
+.-translate-y-1 {
+  --tw-translate-y: calc(var(--spacing) * -1);
+  translate: var(--tw-translate-x) var(--tw-translate-y);
+}
+.-translate-y-1\/2 {
+  --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+  translate: var(--tw-translate-x) var(--tw-translate-y);
+}
 .transform {
   transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
 }
@@ -1535,6 +1786,9 @@
 .cursor-not-allowed {
   cursor: not-allowed;
 }
+.cursor-pointer {
+  cursor: pointer;
+}
 .resize {
   resize: both;
 }
@@ -1543,6 +1797,9 @@
 }
 .flex-row {
   flex-direction: row;
+}
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 .flex-wrap {
   flex-wrap: wrap;
@@ -1624,6 +1881,9 @@
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-x-auto {
+  overflow-x: auto;
+}
 .overflow-y-auto {
   overflow-y: auto;
 }
@@ -1648,6 +1908,27 @@
   --badge-bg: #0000;
   background-image: none;
   border-color: currentColor;
+}
+.table-zebra {
+  tbody {
+    tr {
+      &:where(:nth-child(even)) {
+        background-color: var(--color-base-200);
+        :where(.table-pin-cols tr th) {
+          background-color: var(--color-base-200);
+        }
+      }
+      &.row-hover {
+        &, &:where(:nth-child(even)) {
+          &:hover {
+            @media (hover: hover) {
+              background-color: var(--color-base-300);
+            }
+          }
+        }
+      }
+    }
+  }
 }
 .bg-accent {
   background-color: var(--color-accent);
@@ -1707,6 +1988,12 @@
 .pt-0 {
   padding-top: calc(var(--spacing) * 0);
 }
+.pl-10 {
+  padding-left: calc(var(--spacing) * 10);
+}
+.text-center {
+  text-align: center;
+}
 .text-2xl {
   font-size: var(--text-2xl);
   line-height: var(--tw-leading, var(--text-2xl--line-height));
@@ -1754,6 +2041,9 @@
 .tracking-tight {
   --tw-tracking: var(--tracking-tight);
   letter-spacing: var(--tracking-tight);
+}
+.text-wrap {
+  text-wrap: wrap;
 }
 .whitespace-nowrap {
   white-space: nowrap;
@@ -1840,6 +2130,10 @@
 .opacity-90 {
   opacity: 90%;
 }
+.shadow {
+  --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+}
 .shadow-2xs {
   --tw-shadow: 0 1px var(--tw-shadow-color, rgb(0 0 0 / 0.05));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1907,6 +2201,10 @@
 .duration-200 {
   --tw-duration: 200ms;
   transition-duration: 200ms;
+}
+.ease-in-out {
+  --tw-ease: var(--ease-in-out);
+  transition-timing-function: var(--ease-in-out);
 }
 .ease-out {
   --tw-ease: var(--ease-out);
@@ -1991,6 +2289,13 @@
     }
   }
 }
+.hover\:bg-base-300 {
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-base-300);
+    }
+  }
+}
 .hover\:shadow-lg {
   &:hover {
     @media (hover: hover) {
@@ -2051,6 +2356,16 @@
 .disabled\:opacity-50 {
   &:disabled {
     opacity: 50%;
+  }
+}
+.sm\:flex-row {
+  @media (width >= 40rem) {
+    flex-direction: row;
+  }
+}
+.sm\:items-center {
+  @media (width >= 40rem) {
+    align-items: center;
   }
 }
 .md\:shrink-0 {
@@ -2474,6 +2789,21 @@
     filter: brightness(1.05) contrast(1.05);
   }
 }
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -2650,6 +2980,9 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
