--- a/app/assets/tailwind.css
+++ b/app/assets/tailwind.css
@@ -1238,6 +1238,114 @@
 .left-3 {
   left: calc(var(--spacing) * 3);
 }
+.file-input {
+  cursor: pointer;
+  cursor: pointer;
+  border: var(--border) solid #0000;
+  display: inline-flex;
+  appearance: none;
+  align-items: center;
+  background-color: var(--color-base-100);
+  vertical-align: middle;
+  webkit-user-select: none;
+  user-select: none;
+  width: clamp(3rem, 20rem, 100%);
+  height: var(--size);
+  padding-inline-end: 0.75rem;
+  font-size: 0.875rem;
+  line-height: 2;
+  border-start-start-radius: var(--join-ss, var(--radius-field));
+  border-start-end-radius: var(--join-se, var(--radius-field));
+  border-end-start-radius: var(--join-es, var(--radius-field));
+  border-end-end-radius: var(--join-ee, var(--radius-field));
+  border-color: var(--input-color);
+  box-shadow: 0 1px var(--input-color) inset, 0 -1px oklch(100% 0 0 / calc(var(--depth) * 0.1)) inset;
+  @supports (color: color-mix(in lab, red, red)) {
+    box-shadow: 0 1px color-mix(in oklab, var(--input-color) calc(var(--depth) * 10%), #0000) inset, 0 -1px oklch(100% 0 0 / calc(var(--depth) * 0.1)) inset;
+  }
+  --size: calc(var(--size-field, 0.25rem) * 10);
+  --input-color: var(--color-base-content);
+  @supports (color: color-mix(in lab, red, red)) {
+    --input-color: color-mix(in oklab, var(--color-base-content) 20%, #0000);
+  }
+  &::file-selector-button {
+    margin-inline-end: calc(0.25rem * 4);
+    cursor: pointer;
+    padding-inline: calc(0.25rem * 4);
+    webkit-user-select: none;
+    user-select: none;
+    height: calc(100% + var(--border) * 2);
+    margin-block: calc(var(--border) * -1);
+    margin-inline-start: calc(var(--border) * -1);
+    font-size: 0.875rem;
+    color: var(--btn-fg);
+    border-width: var(--border);
+    border-style: solid;
+    border-color: var(--btn-border);
+    border-start-start-radius: calc(var(--join-ss, var(--radius-field) - var(--border)));
+    border-end-start-radius: calc(var(--join-es, var(--radius-field) - var(--border)));
+    font-weight: 600;
+    background-color: var(--btn-bg);
+    background-size: calc(var(--noise) * 100%);
+    background-image: var(--btn-noise);
+    text-shadow: 0 0.5px oklch(1 0 0 / calc(var(--depth) * 0.15));
+    box-shadow: 0 0.5px 0 0.5px white inset, var(--btn-shadow);
+    @supports (color: color-mix(in lab, red, red)) {
+      box-shadow: 0 0.5px 0 0.5px color-mix( in oklab, color-mix(in oklab, white 30%, var(--btn-bg)) calc(var(--depth) * 20%), #0000 ) inset, var(--btn-shadow);
+    }
+    --size: calc(var(--size-field, 0.25rem) * 10);
+    --btn-bg: var(--btn-color, var(--color-base-200));
+    --btn-fg: var(--color-base-content);
+    --btn-border: var(--btn-bg);
+    @supports (color: color-mix(in lab, red, red)) {
+      --btn-border: color-mix(in oklab, var(--btn-bg), #000 5%);
+    }
+    --btn-shadow: 0 3px 2px -2px var(--btn-bg),
+      0 4px 3px -2px var(--btn-bg);
+    @supports (color: color-mix(in lab, red, red)) {
+      --btn-shadow: 0 3px 2px -2px color-mix(in oklab, var(--btn-bg) 30%, #0000),
+      0 4px 3px -2px color-mix(in oklab, var(--btn-bg) 30%, #0000);
+    }
+    --btn-noise: var(--fx-noise);
+  }
+  &:focus {
+    --input-color: var(--color-base-content);
+    box-shadow: 0 1px var(--input-color);
+    @supports (color: color-mix(in lab, red, red)) {
+      box-shadow: 0 1px color-mix(in oklab, var(--input-color) 10%, #0000);
+    }
+    outline: 2px solid var(--input-color);
+    outline-offset: 2px;
+    isolation: isolate;
+  }
+  &:has(> input[disabled]), &:is(:disabled, [disabled]) {
+    cursor: not-allowed;
+    border-color: var(--color-base-200);
+    background-color: var(--color-base-200);
+    &::placeholder {
+      color: var(--color-base-content);
+      @supports (color: color-mix(in lab, red, red)) {
+        color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
+      }
+    }
+    box-shadow: none;
+    color: var(--color-base-content);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklch, var(--color-base-content) 20%, #0000);
+    }
+    &::file-selector-button {
+      cursor: not-allowed;
+      border-color: var(--color-base-200);
+      background-color: var(--color-base-200);
+      --btn-border: #0000;
+      --btn-noise: none;
+      --btn-fg: var(--color-base-content);
+      @supports (color: color-mix(in lab, red, red)) {
+        --btn-fg: color-mix(in oklch, var(--color-base-content) 20%, #0000);
+      }
+    }
+  }
+}
 .textarea {
   border: var(--border) solid #0000;
   min-height: calc(0.25rem * 20);
@@ -1342,6 +1450,11 @@
   box-shadow: oklch(0% 0 0/ 0.25) 0px 25px 50px -12px;
   overflow-y: auto;
   overscroll-behavior: contain;
+}
+.drawer-content {
+  grid-column-start: 2;
+  grid-row-start: 1;
+  min-width: calc(0.25rem * 0);
 }
 .stat-value {
   grid-column-start: 1;
@@ -2269,6 +2382,10 @@
 .btn-info {
   --btn-color: var(--color-info);
   --btn-fg: var(--color-info-content);
+}
+.btn-neutral {
+  --btn-color: var(--color-neutral);
+  --btn-fg: var(--color-neutral-content);
 }
 .btn-primary {
   --btn-color: var(--color-primary);
