--- a/app/assets/tailwind.css
+++ b/app/assets/tailwind.css
@@ -1750,6 +1750,27 @@
 .min-h-screen {
   min-height: 100vh;
 }
+.w-1 {
+  width: calc(var(--spacing) * 1);
+}
+.w-1\/2 {
+  width: calc(1/2 * 100%);
+}
+.w-1\/4 {
+  width: calc(1/4 * 100%);
+}
+.w-1\/6 {
+  width: calc(1/6 * 100%);
+}
+.w-1\/12 {
+  width: calc(1/12 * 100%);
+}
+.w-2 {
+  width: calc(var(--spacing) * 2);
+}
+.w-2\/6 {
+  width: calc(2/6 * 100%);
+}
 .w-3 {
   width: calc(var(--spacing) * 3);
 }
@@ -1758,6 +1779,9 @@
 }
 .w-16 {
   width: calc(var(--spacing) * 16);
+}
+.w-dvw {
+  width: 100dvw;
 }
 .w-full {
   width: 100%;
@@ -2454,6 +2478,11 @@
 .disabled\:opacity-50 {
   &:disabled {
     opacity: 50%;
+  }
+}
+.sm\:max-w-screen {
+  @media (width >= 40rem) {
+    max-width: 100vw;
   }
 }
 .sm\:flex-row {
